# LauncherEVA

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-packages.yml
config/: eva.config.json
media/: aliases.json
projects/Asistente EVA/: .gitignore  README.md  init.sh  install.sh  main.py  requirements.txt  run_eva.sh
projects/Asistente EVA/config/: eva.config.json
projects/Asistente EVA/scripts/: test.sh
projects/Asistente EVA/src/: app_context.py  db.py  eva.py  horus_server.py  web_server.py  ws_server.py
projects/Asistente EVA/tests/: test_app_config.py  test_players_repository.py  test_web_server.py
projects/horus/: .gitignore  App.tsx  app.json  index.ts  package-lock.json  package.json
scripts/: build_deb.py  build_exe.py  build_onefile_with_vendor.py  build_windows_installer.py  prepare_vendor_linux.py
src/: app_context.py  db.py  eva.py  horus_server.py  web_server.py  ws_server.py
src/commands/: broma.py  countdown.py  mostrar_archivo.py  musica.py
src/db_domains/: cards.py  character_templates.py  players.py
src/domain/: name_generator.py
src/horus/: horus.css  horus.js  index.html  manifest.webmanifest  sw.js
src/launcher_eva/: __init__.py  __main__.py  desktop.py  web_app.py
src/services/: app_config.py  app_paths.py  media_catalog.py  music_service.py  network.py  vosk_model.py
src/web/: index.html  scripts.js
tests/: test_app_config.py  test_cards_repository.py  test_db.py  test_door_rules.py  test_name_generator.py  test_players_repository.py  test_web_server.py
(+77 files in other folders)
