[project]
name = "launcher-eva"
version = "0.1.0"
description = "Panel de control para EVA public release"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
launcher-eva = "launcher_eva.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
